--- a/Project1/app/build.gradle
+++ b/Project1/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+    kapt "androidx.room:room-compiler:2.5.0"
     implementation 'androidx.room:room-common:2.5.0'
     implementation 'androidx.room:room-ktx:2.5.0'
     testImplementation 'junit:junit:4.13.2'
